[package]
name = "z-attack-game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.3"
bevy_pancam = "0.17.0"
bevy_quit = "0.1.1"
rand = "0.9.0"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
